# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.13.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support for package sets.
	- Support for world file. You need execute permissions for
	  /var/lib/portage or set SAVE_WORLD=true and run update-eix with
	  such permissions to make use of this feature.
	- Introduce --installed-slot, MATCH_IF_*SLOT
	- The new defaults for eix-sync now neither call emerge --metadata
	  nor clean /var/cache/edb. You might want to set up an appropriate
	  /etc/eix-sync.conf with previous defaults if you use a cache method
	  depending on this like "portage-2.1" (most users are not affected).
	  See the manpage and eix-sync -h for details. See the discussion in
	  http://bugs.gentoo.org/show_bug.cgi?id=202535
	- Allow "!!" lines in eix-sync to override environment variables like
	  FORCE_USECOLORS, see http://bugs.gentoo.org/show_bug.cgi?id=225963
	- Treat /etc/make.profile with normalize_path(). This should fix
	  http://bugs.gentoo.org/show_bug.cgi?id=229091
	- Fix treatment of "-" in slotnames.
	  Thanks to Edward "Hades" <edward.hades at gmail.com> for the patch,
	  see http://bugs.gentoo.org/show_bug.cgi?id=225773
	- Fix PATH_MAX headers on FreeBSD-7. Thanks to
	  Javier Villavicencio <the_paya at gentoo.org> for the patch, see
	  http://bugs.gentoo.org/show_bug.cgi?id=226499
	- Fix recognition of system packages according to local settings.
	- Provide is now HashedWords. Thanks to
	  Charlie Shepherd <masterdriverz at gmail.com> for reporting.
	- Minor simplifications and compatibility fixes.
	- Finally updated AUTHORS and TODO (Sorry, I had forgotten about
	  these files for a long time) and reformatted ChangeLog.

*eix-0.12.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce DIFF_SEPARATE_DELETED and let it default to true.
	- Introduce DIFF_PRINT_HEADER.
	- Ignore leading + or - for /var/db/pkg/*/*/{,I}USE for paludis.
	  Do the same with IUSE data in packages for EAPI=1. Thanks for the