@@ -1,5 +1,12 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.13.1
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Fix defaults for FORMATLINE_PACKAGESETS, see
+	  http://bugs.gentoo.org/show_bug.cgi?id=229355
+	- Fix broken replacement update-eix-functions.sh path, see
+	  http://bugs.gentoo.org/show_bug.cgi?id=229419
+
 *eix-0.13.0
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Support for package sets.
